--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/c21cfe5a09.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&family=Montserrat:wght@300..900&display=swap" rel="stylesheet">
     <title>WDD 231 - Michael Akpan</title>
 </head>
 <body>
@@ -52,8 +52,7 @@
 
         <section class="discover-container">
             <div class="sidebar">
-                <!-- Visit message added -->
-                <div id="visit-message"></div>
+                <div id="visit-message">Welcome! Let us know if you have any questions.</div>
 
                 <h3>Demographics</h3>
                 <p>Akwa Ibom State has a population of over 5 million people, with Uyo as its capital.</p>
@@ -95,12 +94,10 @@
         <div class="footer-right">
             <ul>
                 <li>WDD231 Class Project</li>
-                <li>Michael Akpan</li>
-                <li>&copy; 
-                    <span id="currentyear"></span>
-                    Ikot Ekpene Chamber of Commerce
-                    <p id="lastModified"></p>
+                 <li>&copy; <span id="currentyear"></span>• <strong>Michael Akpan</strong>• Akwa Ibom, Nigeria</li>  
+                  <li> Ikot Ekpene Chamber of Commerce</li>
                 </li>
+                <li id="lastModified"></li>
             </ul>
         </div>
     </footer>
