--- a/site-plan.html
+++ b/site-plan.html
@@ -3,87 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site Plan - Michael Akpan</title>
-  
-  <!-- Google Fonts -->
+  <meta name="description" content="WDD 231 – Course Home Page by Michael Akpan.">
+  <meta name="author" content="Michael Akpan">
+  <title>WDD231 Site-Plan - Michael Akpan</title>
+  <link rel="stylesheet" href="./styles/site.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@500&display=swap" rel="stylesheet">
-  
-  <style>
-    /* ===== COLOR SCHEME ===== */
-    :root {
-      --primary-color: #004d99; /* Navy Blue for headings */
-      --secondary-color: #ff9900; /* Orange for accents */
-      --text-color: #333; /* Dark gray for body text */
-      --background-color: #f37373; /* Light background */
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      text-align: center;
-      background-color: var(--background-color);
-      color: var(--text-color);
-      margin: 0;
-      padding: 20px;
-      line-height: 1.6;
-    }
-
-    h1, h2 {
-      font-family: 'Orbitron', sans-serif;
-      color: var(--primary-color);
-    }
-
-    section {
-      background: rgb(173, 248, 173);
-      padding: 20px;
-      margin-bottom: 20px;
-      border-left: 6px solid var(--secondary-color);
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(202, 101, 101, 0.05);
-      text-align: left;
-    }
-
-    section ul {
-      padding-left: 20px;
-    }
-
-    strong {
-      color: var(--secondary-color);
-    }
-
-    /* Wireframes grid */
-    .wireframes-grid {
-      display: grid;
-      gap: 20px;
-    }
-
-    @media (min-width: 768px) {
-      .wireframes-grid {
-        grid-template-columns: 1fr 1fr;
-        align-items: start;
-      }
-    }
-
-    .wireframes img {
-      max-width: 100%;
-      border: 20px solid var(--primary-color);
-      border-radius: 100px;
-      margin-top: 20px;
-    }
-
-    .wireframes h3 {
-      color: var(--primary-color);
-      margin-top: 10px;
-    }
-
-    footer {
-      text-align: center;
-      background-color: #1c0ac4;
-      margin-top: 30px;
-      font-size: 0.9em;
-      color: #f5f5f5;
-      padding: 10px;
-    }
-  </style>
 </head>
 <body>
 
@@ -91,14 +15,14 @@
 
   <!-- Site Name -->
   <section>
-    <h2>Site Name</h2>
+    <h2>Michael Ventures</h2>
     <p><strong>EcoTravel Adventures</strong> — This name was chosen because the site focuses on sustainable and eco-friendly travel experiences around the world.</p>
-    <p><em>Optional domain:</em> ecotraveladventures.com</p>
+    <p><em>Mike Carter:</em> ecotraveladventures.com</p>
   </section>
 
   <!-- Site Purpose -->
   <section>
-    <h2>Site Purpose</h2>
+    <h2>Tourist</h2>
     <p>The purpose of this site is to inspire and guide travelers who want to explore the world responsibly. It will provide travel tips, eco-destination guides, packing advice, and a directory of eco-friendly hotels and tour operators.</p>
   </section>
 
@@ -110,23 +34,16 @@
         <strong>Which countries have the best eco-tourism activities?</strong><br>
         Some of the top countries for eco-tourism include:
         <ul>
-          <li><strong>Costa Rica</strong> – Famous for its rainforests, national parks, and biodiversity, offering zip-lining, wildlife tours, and sustainable lodges.</li>
-          <li><strong>New Zealand</strong> – Known for its pristine landscapes, hiking trails, and conservation-focused tourism.</li>
-          <li><strong>Norway</strong> – Offers fjord tours, glacier hikes, and eco-friendly cruises.</li>
-          <li><strong>Bhutan</strong> – Focuses on “high value, low impact” tourism with strong environmental preservation laws.</li>
-          <li><strong>Kenya</strong> – Provides ethical safari experiences that support wildlife conservation and local communities.</li>
+          <li><strong>Costa Rica</strong> – Famous for its rainforests, national parks, and biodiversity.</li>
+          <li><strong>New Zealand</strong> – Known for pristine landscapes and hiking trails.</li>
+          <li><strong>Norway</strong> – Offers fjord tours and eco-cruises.</li>
+          <li><strong>Bhutan</strong> – Preserves culture and environment.</li>
+          <li><strong>Kenya</strong> – Ethical safari experiences.</li>
         </ul>
       </li>
       <li>
         <strong>How can I find affordable, eco-friendly hotels in Europe?</strong><br>
-        To find affordable eco-friendly accommodations in Europe:
-        <ul>
-          <li>Use booking platforms like <em>EcoHotels.com</em>, <em>Bookdifferent.com</em>, or <em>Green Pearls</em> that filter hotels by sustainability certifications.</li>
-          <li>Check for <em>Green Key</em>, <em>EU Ecolabel</em>, or <em>EarthCheck</em> certifications, which indicate verified environmental standards.</li>
-          <li>Travel off-season to get lower rates at sustainable hotels.</li>
-          <li>Consider eco-hostels and locally-run guesthouses instead of large resorts.</li>
-          <li>Use Google Maps with search terms like “eco-friendly hotel” or “sustainable accommodation” in your target city.</li>
-        </ul>
+        Use booking platforms like <em>EcoHotels.com</em>, travel off-season, and check for <em>Green Key</em> or <em>EU Ecolabel</em> certifications.
       </li>
     </ul>
   </section>
@@ -134,33 +51,33 @@
   <!-- Color Schema -->
   <section>
     <h2>Color Scheme</h2>
-    <p>Primary Color: <span style="color: var(--primary-color); font-weight: bold;">Navy Blue</span> — used for headings and important titles.</p>
-    <p>Secondary Color: <span style="color: var(--secondary-color); font-weight: bold;">Orange</span> — used for accents, highlights, and buttons.</p>
-    <p>Background Color: Light red/pink for the overall page background.</p>
+    <p>Primary Color: <span style="color: var(--primary-color); font-weight: bold;">Navy Blue</span> — for headings.</p>
+    <p>Secondary Color: <span style="color: var(--secondary-color); font-weight: bold;">Orange</span> — for accents.</p>
+    <p>Background Color: Light red/pink for the page background.</p>
   </section>
 
   <!-- Typography -->
   <section>
     <h2>Typography</h2>
-    <p>Headings: <strong>Orbitron</strong> — modern, futuristic feel for titles.</p>
-    <p>Body Text: <strong>Roboto</strong> — clean and easy to read for content.</p>
+    <p>Headings: <strong>Orbitron</strong> — modern and futuristic.</p>
+    <p>Body Text: <strong>Roboto</strong> — clean and easy to read.</p>
   </section>
 
-  <!-- Wireframes -->
-  <section class="wireframes">
-    <h2>Wireframes</h2>
-    <p>Below are placeholder sketches for the home page design:</p>
-    <div class="wireframes-grid">
-      <div>
-        <h3>Mobile View</h3>
-        <img src="./images/ikotmart.png" alt="Mobile wireframe sketch placeholder">
-      </div>
-      <div>
-        <h3>Desktop View</h3>
-        <img src="./images/carter.jpg" alt="Desktop wireframe sketch placeholder">
-      </div>
+<!-- Wireframes -->
+<section class="wireframes">
+  <h2>Wireframes</h2>
+  <p>Below are the home page wireframes for mobile and desktop views:</p>
+  <div class="wireframes-grid">
+    <div>
+      <h3>Mobile View</h3>
+      <img src="./images/wireframe-mobile.png" alt="Mobile homepage wireframe">
     </div>
-  </section>
+    <div>
+      <h3>Desktop View</h3>
+      <img src="./images/wireframe-desktop.png" alt="Desktop homepage wireframe">
+    </div>
+  </div>
+</section>
 
   <footer>
     &copy; 2025 Michael Akpan Adventures — Site Plan Document
