--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,6 +32,7 @@
                     <p>Chamber of Commerce</p>
                 </div>
             </div>
+            <button id="hamburger-menu" aria-label="Toggle navigation menu">☰</button>
             <nav>
                 <ul>
                     <li><a href="chamber.html">Home</a></li>
@@ -40,8 +41,7 @@
                     <li><a href="discover.html" class="active">Discover</a></li>
                 </ul>
             </nav>
-            <img src="" alt="Profile of a user" class="user-profile">
-            <button id="hamburger-menu" aria-label="Toggle navigation">
+            <button id="hamburger-button" aria-label="Open navigation menu">
                 <span class="hamburger-icon">&#9776;</span>
             </button>
         </header>
@@ -96,7 +96,6 @@
                 <li>WDD231 Class Project</li>
                  <li>&copy; <span id="currentyear"></span>• <strong>Michael Akpan</strong>• Akwa Ibom, Nigeria</li>  
                   <li> Ikot Ekpene Chamber of Commerce</li>
-                </li>
                 <li id="lastModified"></li>
             </ul>
         </div>
