--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -3,20 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The Ikot Ekpene Chamber of Commerce promotes local businesses and economic growth. View events, weather updates, and featured members.">
-  <title>Ikot Ekpene Chamber of Commerce</title>
-  <link rel="stylesheet" href="./styles/small.css">
-  <link rel="stylesheet" href="./styles/chamber.css">
-  <script src="scripts/chamber.js" defer></script>
+  <title>Directory | Ikot Ekpene Chamber</title>
+  <meta name="description" content="Directory of businesses in Ikot Ekpene Chamber of Commerce">
+  <meta name="author" content="Michael Akpan">
+  <meta property="og:title" content="Ikot Ekpene Chamber Directory">
+  <meta property="og:description" content="Business directory for the Ikot Ekpene Chamber of Commerce">
+  <meta property="og:image" content="images/preview.png">
+ <meta property="og:url" content="https://michaelakpan216.github.io/chamber/directory.html">
+ <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="stylesheet" href="styles/small.css">
+  <link rel="stylesheet" href="styles/chamber.css">
+  <script src="./scripts/chamber.js" defer></script>
+  <script src="./scripts/header.js" defer></script>
 </head>
 <body>
-  <header>
+ <header>
     <div class="logo">
       Ikot Ekpene <br><span>Chamber of Commerce</span>
     </div>
     <nav>
       <ul>
-        <li><a href="chamber.html" class="active">Home</a></li>
+        <li><a href="chamber.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
         <li><a href="join.html">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
