--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <link rel="stylesheet" href="styles/join.css">
     <link rel="stylesheet" href="styles/join-large.css">
+    <link rel="stylesheet" href="styles/chamber.css">
     <script src="./scripts/header.js" defer></script>
     <script src="./scripts/hamburger.js" defer></script>
     <script src="./scripts/discover.js" defer></script>
@@ -32,13 +33,12 @@
                     <p>Chamber of Commerce</p>
                 </div>
             </div>
-            <button id="hamburger-menu" aria-label="Toggle navigation menu">☰</button>
             <nav>
                 <ul>
                     <li><a href="chamber.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="discover.html" class="active">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                 </ul>
             </nav>
             <button id="hamburger-button" aria-label="Open navigation menu">
