--- a/autofinder/about.html
+++ b/autofinder/about.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="About AutoFinder - Our mission and team">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="AutoFinder - Explore and discover vehicles effortlessly">
   <meta name="author" content="Michael Akpan">
-  <meta property="og:title" content="About AutoFinder">
-  <meta property="og:description" content="Meet the people behind AutoFinder.">
-  <title>AutoFinder | About</title>
+  <meta property="og:title" content="AutoFinder">
+  <meta property="og:description" content="Explore and discover vehicles effortlessly.">
+  <meta property="og:image" content="images/car1.jpg">
+  <title>AutoFinder | Michael Akpan</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
 </head>
