--- a/autofinder/contact.html
+++ b/autofinder/contact.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutoFinder | Contact</title>
-  <meta name="description" content="Contact AutoFinder to request information or a test drive">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="AutoFinder - Explore and discover vehicles effortlessly">
   <meta name="author" content="Michael Akpan">
+  <meta property="og:title" content="AutoFinder">
+  <meta property="og:description" content="Explore and discover vehicles effortlessly.">
+  <meta property="og:image" content="images/car1.jpg">
+  <title>AutoFinder | Michael Akpan</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
 </head>
