--- a/autofinder/form-response.html
+++ b/autofinder/form-response.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Response</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="AutoFinder - Explore and discover vehicles effortlessly">
+  <meta name="author" content="Michael Akpan">
+  <meta property="og:title" content="AutoFinder">
+  <meta property="og:description" content="Explore and discover vehicles effortlessly.">
+  <meta property="og:image" content="images/car1.jpg">
+  <title>AutoFinder | Michael Akpan</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
