--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -23,7 +23,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="chamber.html">Home</a></li>
+        <li><a href="/home/index.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
         <li><a href="join.html">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
