--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Directory | Ikot Ekpene Chamber</title>
+  <title>WDD231 | Michael Akpan</title>
   <meta name="description" content="Directory of businesses in Ikot Ekpene Chamber of Commerce">
   <meta name="author" content="Michael Akpan">
   <meta property="og:title" content="Ikot Ekpene Chamber Directory">
